--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,8 @@ hilt = "2.56"
 hiltNavigationCompose = "1.2.0"
 ksp = "2.0.21-1.0.27"
 compiler = "3.2.0-alpha11"
+okhttpBom = "4.12.0"
+picasso = "2.8"
 retrofit = "2.9.0"
 
 [libraries]
@@ -42,6 +44,10 @@ dagger-hilt-android = { module = "com.google.dagger:hilt-android", version.ref =
 dagger-hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hilt"  }
 androidx-compiler = { group = "androidx.databinding", name = "compiler", version.ref = "compiler" }
 listenablefuture = { module = "com.google.guava:listenablefuture", version.ref = "listenablefuture" }
+logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor" }
+okhttp = { module = "com.squareup.okhttp3:okhttp" }
+okhttp-bom = { module = "com.squareup.okhttp3:okhttp-bom", version.ref = "okhttpBom" }
+picasso = { module = "com.squareup.picasso:picasso", version.ref = "picasso" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 
 [plugins]
