--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,29 +1,35 @@
 [versions]
-composeBom = "2025.06.00"
-composeMaterial = "1.7.5"
-agp = "8.8.0"
-coilCompose = "2.6.0"
-converterGson = "2.9.0"
-kotlin = "2.0.21"
-coreKtx = "1.15.0"
+composeBom = "2025.07.00"
+composeMaterial = "1.7.8"
+agp = "8.12.0"
+coilCompose = "2.7.0"
+converterGson = "3.0.0"
+kotlin = "2.2.0"
+coreKtx = "1.16.0"
 junit = "4.13.2"
-junitVersion = "1.2.1"
-espressoCore = "3.6.1"
-lifecycleRuntimeKtx = "2.8.7"
+junitVersion = "1.3.0"
+espressoCore = "3.7.0"
+lifecycleRuntimeKtx = "2.9.2"
 activityCompose = "1.10.1"
 listenablefuture = "9999.0-empty-to-avoid-conflict-with-guava"
-navigationCompose = "2.8.9"
-kotlinxSerializationJson = "1.7.3"
-hilt = "2.56"
+navigationCompose = "2.9.3"
+kotlinxSerializationJson = "1.9.0"
+hilt = "2.57"
 hiltNavigationCompose = "1.2.0"
-ksp = "2.0.21-1.0.27"
-compiler = "3.2.0-alpha11"
-okhttpBom = "4.12.0"
-picasso = "2.8"
-retrofit = "2.9.0"
+ksp = "2.2.0-2.0.2"
+okhttpBom = "5.1.0"
+picasso = "2.71828"
+retrofit = "3.0.0"
+room = "2.7.2"
+lifecycleViewmodelCompose = "2.9.2"
 
 
 [libraries]
+room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
+room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
+room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
+lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycleViewmodelCompose" }
+
 material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "composeMaterial" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
@@ -46,7 +52,7 @@ androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-com
 kotlin-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson"}
 dagger-hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt"}
 dagger-hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hilt"  }
-androidx-compiler = { group = "androidx.databinding", name = "compiler", version.ref = "compiler" }
+
 listenablefuture = { module = "com.google.guava:listenablefuture", version.ref = "listenablefuture" }
 logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor" }
 okhttp = { module = "com.squareup.okhttp3:okhttp" }
